# tree

./: CMakeLists.txt  README.md  sim.ipynb
dataset/mo1D/: input.txt  inputMoreRange.txt  q0  q0.txt  q1  q10  q100  q1000  q1001  q1002  q1003  q1004  q1005  q1006  q1007  q1008  q1009  q101  q1010  q1011  q1012  q1013  q1014  q1015  q1016  q1017  q1018  q1019  q102  q1020  q1021  q1022  q1023  q1024  q1025  q1026  q1027  q1028  q1029  q103  (+2313 more)
dataset/mo1M/: input.txt  inputMoreRange.txt  inputcore.txt  inputreach.txt  q0  q0-10  q0-20  q0-30  q0-40  q0-50  q0-60  q0-70  q1  q10  q11  q12  q13  q14  q15  q16  q17  q18  q19  q2  q20  q21  q22  q23  q24  q25  q26  q27  q28  q29  q3  q30  q31  q32  q33  q34  (+49 more)
dataset/mo2M/: input.txt  q0  q1  q10  q11  q12  q13  q14  q15  q16  q17  q18  q19  q2  q20  q21  q22  q23  q24  q25  q26  q27  q28  q29  q3  q30  q31  q32  q33  q34  q35  q36  q37  q38  q39  q4  q5  q6  q7  q8  (+1 more)
dataset/mo3D/: input.txt  q0  q1  q10  q100  q101  q102  q103  q104  q105  q106  q107  q108  q109  q11  q110  q111  q112  q113  q114  q115  q116  q117  q118  q119  q12  q120  q121  q122  q123  q124  q125  q126  q127  q128  q129  q13  q130  q131  q132  (+745 more)
dataset/mo4M/: input.txt  q0  q1  q10  q11  q12  q13  q14  q15  q16  q17  q18  q19  (+8 more)
graph/: CMakeLists.txt  graph.cpp  graph.h
query/: CECI.hpp  CMakeLists.txt  Delta.cpp  EvaluateQuery.cpp  EvaluateQuery.h  IIT.hpp  IITR.hpp  LLAMA.hpp  Mem.cpp  Mem.h  ViLa.cpp  ViLa.h  baseline.hpp  cal.cpp  deltagraph.cpp  deltagraph.h  graphDelta.cpp  graphDelta.h  main.cpp  mainCECI.cpp  mainRoaring.cpp  staticcore.hpp  ticktock.h  type.h
roaring/: CMakeLists.txt
utility/: CMakeLists.txt  computesetintersection.h  graphoperations.h  types.h
utils/: CMakeLists.txt  pod.h
(+338 files in other folders)
